Added another screen
Made a new screen but transitions are completely broken. Tried to fix
but holding off for another time.

Consider just copy/pasting the old one (yes even though it passes around
smart pointers) and just using it wholesale for now since it works (or
so I think...)

--- a/AntiAlias2EB/AntiAlias2EB/AntiAlias2EB.vcxproj
+++ b/AntiAlias2EB/AntiAlias2EB/AntiAlias2EB.vcxproj
@@ -125,6 +125,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AnotherScreen.cpp" />
     <ClCompile Include="FadeColour.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="OverworldScreen.cpp" />
@@ -143,6 +144,7 @@
     <ClCompile Include="Transitioner.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AnotherScreen.h" />
     <ClInclude Include="FadeColour.h" />
     <ClInclude Include="OverworldScreen.h" />
     <ClInclude Include="Scene.h" />
